Basic fixes to get tomcat integration working again
git-svn-id: https://svn.apache.org/repos/asf/incubator/openejb/trunk/openejb3@527742 13f79535-47bb-0310-9956-ffa450edef68